[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedance-sdk"
version = "1.0.0"
description = "Python SDK for Seedance AI Video Generation API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Seedance Team", email = "support@vibegen.art"}
]
keywords = ["ai", "video", "generation", "api", "seedance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-requests",
]

[project.urls]
Homepage = "https://vibegen.art"
Documentation = "https://github.com/tc1989tc/seedance-api"
Repository = "https://github.com/tc1989tc/seedance-api"
Issues = "https://github.com/tc1989tc/seedance-api/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["seedance*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
